python/versioned_docs/version-1.17/assertions.mdx
---
id: assertions
title: "Assertions"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Playwright provides convenience APIs for common tasks, like reading the text content of an element. These APIs can be used in your test assertions.

- [Text content](#text-content)
- [Inner text](#inner-text)
- [Attribute value](#attribute-value)
- [Checkbox state](#checkbox-state)
- [JS expression](#js-expression)
- [Inner HTML](#inner-html)
- [Visibility](#visibility)
- [Enabled state](#enabled-state)
- [Custom assertions](#custom-assertions)

## Text content

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
content = page.text_content("nav:first-child")
assert content == "home"
```

</TabItem>
<TabItem value="async">

```py
content = await page.text_content("nav:first-child")
assert content == "home"
```

</TabItem>
</Tabs>

### API reference
- [page.text_content(selector, **kwargs)](./api/class-page.mdx#page-text-content)
- [element_handle.text_content()](./api/class-elementhandle.mdx#element-handle-text-content)

## Inner text

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
text = page.inner_text(".selected")
assert text == "value"
```

</TabItem>
<TabItem value="async">

```py
text = await page.inner_text(".selected")
assert text == "value"
```

</TabItem>
</Tabs>

### API reference
- [page.inner_text(selector, **kwargs)](./api/class-page.mdx#page-inner-text)
- [element_handle.inner_text()](./api/class-elementhandle.mdx#element-handle-inner-text)

## Attribute value

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
alt = page.get_attribute("input", "alt")
assert alt == "Text"
```

</TabItem>
<TabItem value="async">

```py
alt = await page.get_attribute("input", "alt")
assert alt == "Text"
```

</TabItem>
</Tabs>

## Checkbox state

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
checked = page.is_checked("input")
assert checked
```

</TabItem>
<TabItem value="async">

```py
checked = await page.is_checked("input")
assert checked
```

</TabItem>
</Tabs>

### API reference
- [page.is_checked(selector, **kwargs)](./api/class-page.mdx#page-is-checked)
- [element_handle.is_checked()](./api/class-elementhandle.mdx#element-handle-is-checked)

## JS expression

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
content = page.locator("nav:first-child").text_content()
assert content == "home"
```

</TabItem>
<TabItem value="async">

```py
content = await page.locator("nav:first-child").text_content()
assert content == "home"
```

</TabItem>
</Tabs>

### API reference
- [page.eval_on_selector(selector, expression, **kwargs)](./api/class-page.mdx#page-eval-on-selector)
- [js_handle.evaluate(expression, **kwargs)](./api/class-jshandle.mdx#js-handle-evaluate)

## Inner HTML

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
html = page.inner_html("div.result")
assert html == "<p>Result</p>"
```

</TabItem>
<TabItem value="async">

```py
html = await page.inner_html("div.result")
assert html == "<p>Result</p>"
```

</TabItem>
</Tabs>

### API reference
- [page.inner_html(selector, **kwargs)](./api/class-page.mdx#page-inner-html)
- [element_handle.inner_html()](./api/class-elementhandle.mdx#element-handle-inner-html)

## Visibility

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
visible = page.is_visible("input")
assert visible
```

</TabItem>
<TabItem value="async">

```py
visible = await page.is_visible("input")
assert visible
```

</TabItem>
</Tabs>

### API reference
- [page.is_visible(selector, **kwargs)](./api/class-page.mdx#page-is-visible)
- [element_handle.is_visible()](./api/class-elementhandle.mdx#element-handle-is-visible)

## Enabled state

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
enabled = page.is_enabled("input")
assert enabled
```

</TabItem>
<TabItem value="async">

```py
enabled = await page.is_enabled("input")
assert enabled
```

</TabItem>
</Tabs>

### API reference
- [page.is_enabled(selector, **kwargs)](./api/class-page.mdx#page-is-enabled)
- [element_handle.is_enabled()](./api/class-elementhandle.mdx#element-handle-is-enabled)

## Custom assertions

With Playwright, you can also write custom JavaScript to run in the context of the browser. This is useful in situations where you want to assert for values that are not covered by the convenience APIs above.

<Tabs
  groupId="python-flavor"
  defaultValue="sync"
  values={[
    {label: 'Sync', value: 'sync'},
    {label: 'Async', value: 'async'}
  ]
}>
<TabItem value="sync">

```py
# Assert local storage value
user_id = page.evaluate("() => window.localStorage.getItem('user_id')")
assert user_id

# Assert value for input element
value = page.locator('#search').input_value()
assert value == 'query'

# Assert computed style
font_size = page.locator('div').evaluate('el => window.getComputedStyle(el).fontSize')
assert font_size == '16px'

# Assert list length
length = page.locator('li.selected').count()
assert length == 3
```

</TabItem>
<TabItem value="async">

```py
# Assert local storage value
user_id = page.evaluate("() => window.localStorage.getItem('user_id')")
assert user_id

# Assert value for input element
value = await page.locator('#search').input_value()
assert value == 'query'

# Assert computed style
font_size = await page.locator('div').evaluate('el => window.getComputedStyle(el).fontSize')
assert font_size == '16px'

# Assert list length
length = await page.locator('li.selected').count()
assert length == 3
```

</TabItem>
</Tabs>

[Accessibility]: ./api/class-accessibility.mdx "Accessibility"
[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[CDPSession]: ./api/class-cdpsession.mdx "CDPSession"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[Error]: ./api/class-error.mdx "Error"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[Request]: ./api/class-request.mdx "Request"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[Any]: https://docs.python.org/3/library/typing.html#typing.Any "Any"
[bool]: https://docs.python.org/3/library/stdtypes.html "bool"
[bytes]: https://docs.python.org/3/library/stdtypes.html#bytes "bytes"
[Callable]: https://docs.python.org/3/library/typing.html#typing.Callable "Callable"
[EventContextManager]: https://docs.python.org/3/reference/datamodel.html#context-managers "Event context manager"
[EventEmitter]: https://pyee.readthedocs.io/en/latest/#pyee.BaseEventEmitter "EventEmitter"
[Exception]: https://docs.python.org/3/library/exceptions.html#Exception "Exception"
[Dict]: https://docs.python.org/3/library/typing.html#typing.Dict "Dict"
[float]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "float"
[int]: https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex "int"
[List]: https://docs.python.org/3/library/typing.html#typing.List "List"
[NoneType]: https://docs.python.org/3/library/constants.html#None "None"
[Pattern]: https://docs.python.org/3/library/re.html "Pattern"
[URL]: https://en.wikipedia.org/wiki/URL "URL"
[pathlib.Path]: https://realpython.com/python-pathlib/ "pathlib.Path"
[str]: https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str "str"
[Union]: https://docs.python.org/3/library/typing.html#typing.Union "Union"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright/blob/master/utils/docker/Dockerfile.focal "Dockerfile.focal"
